# bare-metal-programming

./: .clang-format  .gitignore  README.md  citnames-config.json
app/: Makefile
app/src/: firmware.c
app_rust/: Cargo.toml  rust-toolchain.toml
app_rust/.cargo/: config.toml
app_rust/src/: main.rs
