[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features =  ["defmt", "time-driver-any", "stm32f446re", "memory-x", "unstable-pac", "exti"] }
embassy-executor = { version = "0.7.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = "s"
incremental = false
codegen-units = 1